// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders as "link" 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #21247F;
  border: 1px solid transparent;
  outline: 0;
  background: transparent;
}

.c0:hover:not(:disabled) {
  background: #EAEBFA;
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
  background: #F7F7F7;
  color: #818F9B;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
  styling="link"
>
  Secondary
</button>
`;

exports[`<Button /> renders as "secondary" 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #21247F;
  border: 1px solid transparent;
  outline: 0;
  background: #E9EAFA;
}

.c0:hover:not(:disabled) {
  background: #EEEFFB;
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
  background: #F7F7F7;
  color: #818F9B;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
  styling="secondary"
>
  Secondary
</button>
`;

exports[`<Button /> renders disabled 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #FFFFFF;
  border: 1px solid transparent;
  outline: 0;
  background-color: #3B46C4;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
}

.c0:hover:not(:disabled) {
  background: linear-gradient(90deg,#3B46C4 0%,#2732B0 100%);
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
  background: #F7F7F7;
  color: #818F9B;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
  disabled=""
  styling="primary"
>
  Secondary
</button>
`;

exports[`<Button /> renders loading as "primary" 1`] = `
.c1 {
  width: 20px;
  height: 20px;
  border: 3px solid #FFFFFF;
  border-radius: 50%;
  border-top-color: transparent;
  -webkit-animation: fvtopB 1.2s linear infinite;
  animation: fvtopB 1.2s linear infinite;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #FFFFFF;
  border: 1px solid transparent;
  outline: 0;
  background-color: #3B46C4;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
}

.c0:hover:not(:disabled) {
  background: linear-gradient(90deg,#3B46C4 0%,#2732B0 100%);
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
  disabled=""
  styling="primary"
>
  <div
    class="c1"
  />
   
    
  Loading
</button>
`;

exports[`<Button /> renders loading as "secondary" 1`] = `
.c1 {
  width: 20px;
  height: 20px;
  border: 3px solid #3B46C4;
  border-radius: 50%;
  border-top-color: transparent;
  -webkit-animation: fvtopB 1.2s linear infinite;
  animation: fvtopB 1.2s linear infinite;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #21247F;
  border: 1px solid transparent;
  outline: 0;
  background: #E9EAFA;
}

.c0:hover:not(:disabled) {
  background: #EEEFFB;
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
  disabled=""
  styling="secondary"
>
  <div
    class="c1"
  />
   
    
  Waiting
</button>
`;

exports[`<Button /> renders loading as "secondary" 2`] = `
.c1 {
  width: 20px;
  height: 20px;
  border: 3px solid #3B46C4;
  border-radius: 50%;
  border-top-color: transparent;
  -webkit-animation: fvtopB 1.2s linear infinite;
  animation: fvtopB 1.2s linear infinite;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #21247F;
  border: 1px solid transparent;
  outline: 0;
  background: #E9EAFA;
}

.c0:hover:not(:disabled) {
  background: #EEEFFB;
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
  disabled=""
  styling="secondary"
>
  <div
    class="c1"
  />
   
    
  Waiting
</button>
`;

exports[`<Button /> renders wide 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #FFFFFF;
  border: 1px solid transparent;
  outline: 0;
  background-color: #3B46C4;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
}

.c0:hover:not(:disabled) {
  background: linear-gradient(90deg,#3B46C4 0%,#2732B0 100%);
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
  background: #F7F7F7;
  color: #818F9B;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
  styling="primary"
>
  Secondary
</button>
`;

exports[`<Button /> renders with no a11y violations 1`] = `
.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 16px 24px;
  font-family: "Open Sans",Roboto,Helvetica,Arial,sans-serif;
  font-size: 15px;
  line-height: 1.2;
  font-weight: 600;
  cursor: pointer;
  border-radius: 8px;
  color: #FFFFFF;
  border: 1px solid transparent;
  outline: 0;
  background-color: #3B46C4;
  background: linear-gradient(90deg,#4F5AD8 0%,#3B46C4 100%);
}

.c0:hover:not(:disabled) {
  background: linear-gradient(90deg,#3B46C4 0%,#2732B0 100%);
}

.c0:focus:not(:active) {
  border: 1px solid #FFFFFF;
  box-shadow: 0 0 4px #3B46C4;
}

.c0:disabled {
  cursor: not-allowed;
  background: #F7F7F7;
  color: #818F9B;
}

.c0:active:not(:disabled) {
  border: 1px solid transparent;
  box-shadow: unset;
  opacity: 0.8;
}

<button
  class="c0"
  styling="primary"
>
  Primary
</button>
`;
